--- a/configuration.properties
+++ b/configuration.properties
@@ -5,4 +5,4 @@ emailLunchInvoicingUser=Lunch_Invoicing_User@info.com
 passwordLunchInvoicingUser=LD686gfX26
 invalidEmail=xxx.aqa
 invalidPassword=!@#;/.
-url=http://52.39.162.23/web/database/selector
+url=http://54.148.96.210/
