--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,8 @@
                     <testFailureIgnore>true</testFailureIgnore>
 
                     <includes>
-                        <!--<include>**/*CukesRunner.java</include>-->
-                        <include>**/*SmokeTestRunner.java</include>
+                        <include>**/*CukesRunner.java</include>
+                        <!--<include>**/*SmokeTestRunner.java</include>-->
                     </includes>
                 </configuration>
             </plugin>
